--- a/style.css
+++ b/style.css
@@ -306,6 +306,86 @@
   }
 
 
+  
+  .footer {
+    flex-direction: column;
+    align-items: center;
+    padding: 20px 10px;
+  }
+  .footer-logo {
+    margin-bottom: 20px;
+    text-align: center;
+  }
+  .footer-logo h2 {
+    font-size: 28px;
+  }
+  .product-footer {
+    margin-bottom: 20px;
+    text-align: center;
+  }
+  .product-footer h3 {
+    font-size: 18px;
+    margin-bottom: 15px;
+  }
+  .product-footer ul {
+    padding: 0;
+  }
+.footer-content-line p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  left: -32px;
+  top: 384px;
+}
+.footer-content-line {
+  font-size: 12px;
+  margin-top: 5px;
+  padding-left: 25%;
+  font-family: "Montserrat", serif;
+  color: #adadad;
+}
+.product-footer ul li {
+  margin-bottom: 8px;
+}
+.product-footer ul li a {
+  font-size: 14px;
+}
+.product-footer {
+  margin-bottom: 20px;
+  text-align: left;
+  order: -3;
+}
+.product-main {
+    display: flex;
+    gap: 90px;
+    order: -2;
+  }
+  .footer-icon {
+    display: flex;
+    gap: 46px;
+    order: -1;
+    font-size: 23px;
+  }
+  /* .left-foot {
+    width: 500px;
+    padding-left: 5px;
+    color: white;
+  } */
+  .left-foot h1{
+    font-size: 38px;
+  }
+  
+  /* .right-foot a.btn.btn-get-started {
+    background: aliceblue;
+    color: #ff6f3c;
+    border-radius: 10px;
+  } */
+  /* .inner{
+    display: flex;
+    flex-direction: column;
+  } */
+  
   @media (max-width:767px) {
     .col-md-6.hero-image.text-center {
         display: flex;
@@ -333,93 +413,51 @@
     .carousel-item {
         text-align: center;
       }
-
-      .right-foot {
+  
+      /* .right-foot {
         margin: 0%;
         padding: 0%;
         display: flex;
         align-items: end;
-        justify-content: end;
+        justify-content: end; */
     }
-
-/* footer */
-
-.footer {
-    flex-direction: column;
-    align-items: center;
-    padding: 20px 10px;
-}
-.footer-logo {
-    margin-bottom: 20px;
-    text-align: center;
-}
-.footer-logo h2 {
-    font-size: 28px;
-}
-.product-footer {
-    margin-bottom: 20px;
-    text-align: center;
-}
-.product-footer h3 {
-    font-size: 18px;
-    margin-bottom: 15px;
-}
-.product-footer ul {
-    padding: 0;
-}
-.footer-content-line p {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    left: -32px;
-    top: 384px;
-}
-.footer-content-line {
-    font-size: 12px;
-    margin-top: 5px;
-    padding-left: 25%;
-    font-family: "Montserrat", serif;
-    color: #adadad;
-}
-.product-footer ul li {
-    margin-bottom: 8px;
-}
-.product-footer ul li a {
-    font-size: 14px;
-}
-.product-footer {
-    margin-bottom: 20px;
-    text-align: left;
-    order: -3;
-}
-.product-main {
-    display: flex;
-    gap: 90px;
-    order: -2;
-}
-.footer-icon {
-    display: flex;
-    gap: 46px;
-    order: -1;
-    font-size: 23px;
-}
-.left-foot {
-    width: 500px;
-    padding-left: 5px;
-    color: white;
-}
-.left-foot h1{
-    font-size: 20px;
-}
-
-/* .right-foot a.btn.btn-get-started {
-    background: aliceblue;
-    color: #ff6f3c;
-    border-radius: 10px;
-} */
-/* .inner{
-    display: flex;
-    flex-direction: column;
-} */
+  
+  /* footer */
+  @media (max-width:767px) {
+  .foot2 {
+  /* display: flex; */
+  /* height: 184px; */
+  background-color: #ff6f3c;
+  width: 100%;
+  margin: 0 auto;
+  /* align-items: center; */
+  }
+  .innner {
+  display: flex;
+  width: 100%;
+  /* height: 200px; */
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  }
+  .left-foot {
+  width: 100%;
+  padding: 0px;
+  text-align: center;
+  color: white;
+  margin: 0px auto !important;
+  }
+  .right-foot {
+  margin: 0%;
+  width: 100%;
+  padding: 0%;
+  /* display: flex; */
+  align-items: end;
+  right: 0%;
+  justify-content: end;
+  }
+  .left-foot h1 {
+  font-size: 25px !important;
+  }
+  
   }
